refactor(ui): regenerate bt api client
